src/css/profile/mobile/changeable/common/floatingactions.less
.ui-floatingactions {
	position: fixed;
	right: 0;
	bottom: 43 * @unit_base;
	height: 120 * @unit_base;
	padding-left: 30 * @unit_base;
	padding-right: 30 * @unit_base;
	transform: translate3d(24 * @unit_base, 0, 0);
	.core-floating-button-bg();
	background-color: @color_floatingactions_out_bg;
	z-index: 1000;

	&.ui-floatingactions-transitions {
		transition-property: all;
		transition-duration: 500ms;
	}

	.ui-btn {
		display: inline-block;
		width: 120 * @unit_base;
		height: 120 * @unit_base;
		margin: 0;
		background-color: transparent;

		.LESSui-btn-nobg();

		&::before {
			background-color: @color_floatingactions_out_icon_press_effect;
		}

		&.ui-btn-icon.ui-btn-icon-left {
			padding: 0;

			&::after {
				left: 50%;
				top: 50%;
				transform: translate(-50%, -50%);
				width: 80 * @unit_base;
				height: 80 * @unit_base;
				background-color: @color_floatingactions_out_icon;
				z-index: -100;
			}

			&.ui-btn-active {
				::after {
					background-color: @color_floatingactions_out_icon_press;
				}
			}
		}

		&.ui-icon-floating-add::after {
			mask-image: url("images/controls/core_floating_icon_add.png");
		}

		&.ui-icon-floating-search {
			&::after {
				mask-image: url("images/controls/core_floating_icon_search.png");
			}
		}
	}
	.ui-btn ~ .ui-btn {
		margin-left: -20 * @unit_base;
	}

	&.ui-floatingactions-expand-to-right {
		padding-right: 60 * @unit_base;
		right: -30 * @unit_base;
	}

	&.ui-floatingactions-expand-to-left {
		padding-left: 60 * @unit_base;
	}
}

.ui-content .ui-floatingactions,
.ui-tabs .ui-floatingactions {
	background-color: @color_floatingactions_bg;

	.ui-btn {
		&.ui-btn-icon.ui-btn-icon-left {
			&::after {
				background-color: @color_floatingactions_icon;
			}

			&.ui-btn-active {
				&::after {
					background-color: @color_floatingactions_icon_press;
				}
			}
		}

		&::before {
			background-color: @color_floatingactions_icon_press_effect;
		}
	}
}

.ui-indexscrollbar ~ .ui-floatingactions {
	background-color: @color_floatingactions_bg;

	.ui-btn {
		&.ui-btn-icon.ui-btn-icon-left {
			&::after {
				background-color: @color_floatingactions_icon;
			}

			&.ui-btn-active {
				&::after {
					background-color: @color_floatingactions_icon_press;
				}
			}
		}

		&::before {
			background-color: @color_floatingactions_icon_press_effect;
		}
	}
}

.ui-page-floatingactions {
	&.ui-empty-state .ui-content {
		box-sizing: border-box;
		border-bottom: 254 * @unit_base solid transparent;
	}
}

